--- a/package.json
+++ b/package.json
@@ -16,21 +16,27 @@
     "@prisma/client": "^6.2.0",
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.5.3",
     "prisma": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "resend": "^4.0.1"
+    "resend": "^4.0.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.5.3",
+    "jest": "^30.1.3",
     "postcss": "^8.4.49",
+    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.4.4",
     "typescript": "^5.6.3"
   }
 }
