Fix Tailwind CSS loading and add comprehensive debugging
- Add globals.css import to layout.tsx to fix Tailwind styles in iframe
- Add detailed logging throughout dashboard and API routes
- Add helpful error messages when database is empty
- Include exitSurveyReason in recent cancels API response
- Create DEBUGGING.md with comprehensive troubleshooting guide
- Create SETUP_GUIDE.md with deployment instructions
- Add env.example with required environment variables
- Improve CSP comments in next.config.ts

--- a/env.example
+++ b/env.example
@@ -1,4 +1,16 @@
-DATABASE_URL=
-WHOP_API_KEY=
-WEBHOOK_SECRET=
-RESEND_API_KEY=
+# Database
+DATABASE_URL="postgresql://user:password@localhost:5432/churnguard"
+
+# Whop API Configuration
+WHOP_API_KEY="your_whop_api_key_here"
+
+# Webhook Security
+WEBHOOK_SECRET="your_webhook_secret_here"
+
+# App URL (for webhooks and links)
+# Local: http://localhost:3000
+# Production: https://your-app.vercel.app
+VERCEL_URL="your-app.vercel.app"
+
+# Next.js
+NODE_ENV="development"
