Use environment variable for webhook URL in banner
- Replace hardcoded webhook URL with NEXT_PUBLIC_VERCEL_URL env var
- Add dynamic webhook URL display that uses env var with fallback
- Update env.example to include NEXT_PUBLIC_VERCEL_URL
- Fixes webhook URL display to always show correct production URL

--- a/env.example
+++ b/env.example
@@ -12,5 +12,9 @@ WEBHOOK_SECRET="your_webhook_secret_here"
 # Production: https://your-app.vercel.app
 VERCEL_URL="your-app.vercel.app"
 
+# Public Vercel URL (used in client-side code for webhook URL display)
+# Should match your production domain
+NEXT_PUBLIC_VERCEL_URL="whop-churn.vercel.app"
+
 # Next.js
 NODE_ENV="development"
